--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 
             </p>
         </header>
+    
 
         <section class="card blue-grey lighten-2 center-align flow-text">
             <div class="card-title">
@@ -79,8 +80,9 @@
             <div class="card-content">
                 <p>There isnt much Difficulties when using materialize, except for the amount of options and components you can choose from.
                     The hardest part for me however was understanding the "Card" classes and thir structure. With these classses you can easily create
-                    cards on your page with content in seconds however you will have to understand how to sturcute each card class properly
-                    so that the card is built correctly.
+                    cards on your page with content in seconds however you will have to understand how to strucute each card class properly
+                    so that the card is built correctly. I over came this by looking at the provided detailed examples to see how the formatting works and
+                    how to properly structure it.
                 </p>
             </div>
         </section>
